...
  const val TAB_LIKED_HUNTS = "TAB_LIKED_HUNTS"
  const val ADD_HUNT = "ADD_HUNT"
  const val PROFILE_PICTURE = "PROFILE_PICTURE"
  const val EMPTY_PROFILE_PICTURE = "EMPTY PROFILE_PICTURE"
  const val PROFILE_PSEUDONYM = "PROFILE_PSEUDONYM"
  const val PROFILE_BIO = "PROFILE_BIO"
  const val PROFILE_REVIEW_RATING = "PROFILE_REVIEW_RATING"
  const val PROFILE_SPORT_RATING = "PROFILE_SPORT_RATING"
  const val EMPTY_HUNTS_MESSAGE = "EMPTY_HUNTS_MESSAGE"
  const val PROFILE_SCREEN = "PROFILE_SCREEN"
  const val SETTINGS = "SETTINGS"

  fun getTestTagForHuntCard(hunt: Hunt, index: Int): String = "HUNT_CARD_$index"
...
